# cg

./: CMakeLists.txt  LICENSE
include/: buffer.hpp  camera.hpp  control.hpp  framebuffer.hpp  handle.hpp  image.hpp  light.hpp  material.hpp  menu.hpp  mesh.hpp  model.hpp  object.hpp  render.hpp  sampler.hpp  scene.hpp  shader.hpp  state.hpp  texture.hpp  ui.hpp  vertex.hpp  window.hpp
resources/scenes/: sponza.mtl
resources/shaders/: compute_clusters.comp  depth.vert  downsample_depth.frag  downsample_depth.vert  downsample_depth_velocity.frag  gtao.frag  gtao_spartial.frag  gtao_temporal.frag  gtao_temporal.vert  light_culling.comp  lighting.frag  lighting.vert  screen.frag  shadow_csm.frag  shadow_csm.geom  shadow_csm.vert  shadow_cube.frag  shadow_cube.geom  shadow_cube.vert  velocity.frag
src/: buffer.cpp  camera.cpp  control.cpp  framebuffer.cpp  image.cpp  light.cpp  main.cpp  menu.cpp  mesh.cpp  model.cpp  object.cpp  render.cpp  sampler.cpp  scene.cpp  shader.cpp  state.cpp  texture.cpp  ui.cpp  window.cpp
